--- a/curso-js/3. Fundamentos de JavaScript.md
+++ b/curso-js/3. Fundamentos de JavaScript.md
@@ -11,7 +11,7 @@
 - En un fichero aparte
 - Mediante CLI 
 ```bash
-node script.js`
+node script.js
 ```
 
 Ejemplo:
@@ -102,7 +102,7 @@ JS  tiene **tipado dinámico**, como PHP, así que os resultará sencillo.
 
 - Usar operador **typeof** para ver los tipos
 - Comentarios en JS 
-	- Usar CTRL + Mays + 7 en VS Code
+	- Usar **CTRL + Mays + 7 en VS Code**
 - Usar extensión para console.log
 
 
@@ -511,7 +511,7 @@ Hay un tercer tipo  que se añadió en ES6 y es "más rápida de escribir" ya qu
 
 - Funciones flecha (arrow functions):
 	```js
-	const calcularEdad = añoNacimmiento => 2022 - añoNacimiento;
+	const calcularEdad = añoNacimiento => 2022 - añoNacimiento;
 	```
 
 Ejercicio:
@@ -635,7 +635,7 @@ Con objetos podemos dar un nombre a cada campo y acceder a ellos mediante dos no
 ```js
 const amigos = ["pepe", "juan", "lucas"];
 const Fernando = {
-	nombre: 'Fernando',
+  nombre: 'Fernando',
   apelllido: "Martínez",
   profesión: "mecánico",
   añoNacimiento: 1980,
@@ -727,3 +727,40 @@ do {
 ```
 
 El for es más adecuado para un número fijo de iteraciones (por ejemplo, la longitud de  un array).
+
+
+¿Permite usar break y continue  forEach en  javascript?
+
+
+## Debug
+
+Hablamos   de debug sobre la manera de inspeccionar nuestro código para corregir los errores o bugs.
+El siguiente código sirve para calcular la temperatura en grados Kelvin a partir de grados centígrados. Ejecuta el siguiente código y verás que se produce un error:
+
+```js
+const measureKelvin = function () {
+	const measurement = {
+		type: 'temp',
+		unit: 'celsius',
+		value:  prompt('Introduce los grados Celsius')
+	};
+	const kelvin = measurement.value + 273;
+	return kelvin;
+};
+measureKelvin();
+```
+
+Una forma muy habitual de solucionarlo es mediante mensajes de consola:
+
+```js
+console.log(measurement.value);
+// console.warn(measurement.value);
+// console.error(measurement.value);
+// console.table(measurement);
+```
+
+Otra opción es escribir un punto de interrupción mediante una  línea en  nuestro  código que para la ejecución:
+```js 
+debugger;
+````
+Otra  opción  es poner el punto de interrupción directamente con las dev tools y luego inspeccionar desde allí. 
