--- a/curso-js/4. Fundamentos del DOM y eventos.md
+++ b/curso-js/4. Fundamentos del DOM y eventos.md
@@ -1,27 +1,58 @@
-# DOM
-- Document Object Model
-	- Representación estructurada de los documentos HTML
-	- JavaScript puede acceder a los elementos HTML y modificarlos (añadir hijos, hermanos, cambiar estilos...)
+## ¿Qué es el  DOM?
+Document Object Model
+- Representación estructurada de los documentos HTML
+- JavaScript puede acceder a los elementos HTML y modificarlos (añadir hijos, hermanos, cambiar estilos...)
 
----
+
 ![[arbol-dom.png]]
-
----
-
 
 
 ![[dom-estructura.png]]
 
--  Se habla de elementos como padres, hijos o  hermanos
----
+
 ## DOM !== JavaScript
 - Los métodos y propiedades para acceder y manipular el DOM no son parte de JavaScript
-	```
-	// por ej:
-	document.querySelector()
-	```
+```
+// por ej:
+document.querySelector()
+```
 
 	![[web-api-browser.png]]
+
+La **WEB API** son librerías que los browser implementan y a las que se puede acceder desde js.
+¿Qué es  una **API**? -> *Application programing interface*, en este caso escrita en JS y que podemos usar.
+Hay una especificación DOM, que hace que todos los navegadores cumplan cierto estándar.
+
+## Documentación
+
+En la [web de Mozillla](https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model)
+
+### Comandos más habituales
+
+### querySelector
+Selecciona **el primer elemento** que cumpla la condición.  La condición se especifica con un selector, similar a los que se usan en las reglas de CSS.
+```js
+const el = document.querySelector(".myclass");
+```
+
+### querySelectorAll
+Selecciona todos los elementos que cumplen la condición. Retorna un **array de elementos**.
+```js
+const els = document.querySelectorAll("div.note, div.alert");
+```
+### getElementById
+
+- No necesita el selector de CSS (#), ya viene implícito en el nombre de la función. Retorna un solo objeto.
+```js
+function changeColor(newColor) {
+  const el = document.getElementById("day")
+  elem.style.backgroundColor = newColor;
+}
+```
+Observa que cambiamos valores  de css mediante js  con la **propiedad *style*** y que las propiedades de css desde JavaScript se escrien en **notación camelCase**.
+
+### getElementByClassName
+- Similar al caso anterior, pero retorna un array de objetos.
 
 
 ## Proyecto adivinar un número
@@ -29,89 +60,39 @@
 Código  en [[Instrucciones|carpeta Proyecto 1]]
 
 Vemos primero el proyecto en ejecución.
-¿Cómo referirnos a partes de la página?
-Con querySelector  y un predicado similar al de los selectores CSS:
-	
+
+### Probar aceso y modificación del DOM
+
 ```js
 console.log(document.querySelector('.message').textContent);
 ```
 
-Ojo, el DOM y los métodos de acceso al DOM no es JS, es otra cosa llamada **WEB API**, librerías que los browser implementan y a las que se puede acceder desde js.
-¿Qué es  una **API**? -> *Application programing interface*, en este caso escrita en JS y que podemos usar.
-Hay una especificación DOM, que hace que todos los browser implementen lo mismo. 
-
-Comprobamos que podamos acceder al DOM y hacer modificaciones:
-
 ```js
-console.log(document.querySelector('.message').textContent);
 document.querySelector('.message').textContent = '🎉 Correct Number!';
 document.querySelector('.number').textContent = 13;
 document.querySelector('.score').textContent = 10;
 ```
 
-Número al azar entre y y 20:
+### Número al  azar
+Mediante el objeto [Math](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math). Puedes hacer pruebas con  un quokka.js.
+
+Por ejemplo  un número al azar entre y y 20:
 ```js
 let secretNumber = Math.trunc(Math.random() * 20) + 1;
 ```
 
+### Creación de eventos
+
+[addEventListener()](https://developer.mozilla.org/en-US/docs/Web/API/EventTarget/addEventListener) lleva como primer parámetro el nombre del evento, y como segundo parámetro el nombre de la función manejadora del evento (handlerFunction). Es habitual usar funciones anónimas.
 
 Al presionar el botón de comprobar tenemos que asociar un evento:
 
 ```js
-
 document.querySelector('.check').addEventListener('click', function () {
 	const guess = Number(document.querySelector('.guess').value);
 	console.log(guess, typeof guess);
-
-
-	// When there is no input
-	if (!guess) {
-		document.querySelector('.message').textContent = '⛔️ No number!';
-	// When player wins
-
-	} else if (guess === secretNumber) {
-	....
-	}
-	// When guess is too high
-
-	} else if (guess > secretNumber) {
-			if (score > 1) {
-			document.querySelector('.message').textContent = '📈 Too high!';
-			score--;
-			document.querySelector('.score').textContent = score;
-	
-		} else {
-			document.querySelector('.message').textContent = '💥 You lost the game!';
-			document.querySelector('.score').textContent = 0;
-	}
-
-  
-	// When guess is too low
-	
-	} else if (guess < secretNumber) {
-		if (score > 1) {
-			document.querySelector('.message').textContent = '📉 Too low!';
-			score--;
-			document.querySelector('.score').textContent = score;
-		} else {
-			document.querySelector('.message').textContent = '💥 You lost the game!';
-			document.querySelector('.score').textContent = 0;
-		}
-	
-	}
+})
 ```
-
-
-Si acertamos, la caja del número se  hace más  grande, y el  fondo verde
-	- Cambiamos valores  de css mediante js  a través de *style*
-	- Observa que las propiedades de css desde js cambian a camelCase:
-
-  
-```js
-document.querySelector('body').style.backgroundColor = '#60b347';
-document.querySelector('.number').style.width = '30rem';
-```
-  
 
 
 ## Desafío de código
@@ -121,13 +102,11 @@ Implementa el código necesario para que un usuario pueda jugar una nueva partid
 
 1. Selecciona el  elemento con la clase 'again' y añádele un  *click event handler*
 2. En dicha función, restaura valores iniciales de puntuación, textos y del número a adivinar
-3. Restore the initial conditions of the message, number, score and guess input field
-4. Restaura  también el color  de fondo  (#222) y la anchura del número (15rem)
+3. Restaura  también el color  de fondo  (#222) y la anchura del número (15rem)
 
-### Solución clase
+### Ayudas
 El código puede cambiar  respecto al colocado en la parte anterior.
 ```js
-'use strict';
 
 // defino mis elementos del DOM mediante variables js
 const scoreField = document.querySelector('.score');
@@ -138,92 +117,29 @@ const checkButton = document.querySelector('.check');
 const guessInput = document.querySelector('.guess');
 const body = document.querySelector('body');
 const againButton = document.querySelector('.again');
+```
 
+Definimos variables y constantes para la partida. Una especie de **estado de la  aplicación**.
+
+```js
 // Inicializamos app
 let secretNumber;
 let score;
 let highScore;
 const INIT_SCORE = 5;
-// creamos  initAPP por DRY ->  DON'T REPEAT YOURSELF
-initApp();
-
-// LÓGICA DEL  JUEGO
-checkButton.addEventListener('click', function () {
-  const guess = Number(guessInput.value);
-  if (guess === secretNumber) {
-    if (score > highScore) {
-      highScore = score;
-      highScoreField.textContent = score;
-      window.localStorage.setItem('highScore', score);
-    }
-    message.textContent = '¡Has ganado!';
-    body.style.backgroundColor = '#60b347';
-    number.style.width = '30rem';
-    number.textContent = secretNumber;
-  } else {
-    if (score > 1) {
-      message.textContent =
-        guess > secretNumber ? '¡Te has pasado!' : '¡Te has quedado corto!';
-      score--;
-      scoreField.textContent = score;
-    } else {
-      scoreField.textContent = 0;
-      message.textContent = 'Has perdido';
-    }
-  }
-});
-
-// Mal: asociamos al evento click el return de la
-// función initApp() que  en  este caso es undefined
-// againButton.addEventListener('click', initApp());
-againButton.addEventListener('click', initApp);
-
-function initApp() {
-  score = INIT_SCORE;
-  secretNumber = Math.trunc(Math.random() * 20 + 1);
-  scoreField.textContent = score;
-
-  body.style.backgroundColor = '#222';
-  number.style.width = '15rem';
-  number.textContent = '?';
-  guessInput.value = '';
-  // highScore undefined, 0  -> coercion type ->  false
-  if (!highScore) {
-    // if (highScore === undefined) {
-    // sin localStorage:
-    // highScore = 0;
-    //
-    highScore = Number(window.localStorage.getItem('highScore'));
-  }
-  highScoreField.textContent = highScore;
-}
 ```
 
+### Principio DRY
 
-  ## Principio DRY 
-
-  Refactoricemos el código para evitar mensajes duplicados:
+Refactoricemos el código mediante funciones:
 
 ```js
-const displayMessage = function (message) {
-	document.querySelector('.message').textContent = message;
+const displayMessage = function (msg) {
+	messsage.textContent = message;
 };
 ```
 
-Observa además  que el código si nos equivocamos por  encima o  por debajo del número es muy parecido, y se podría unificar:
 
-```js
-else if (guess !== secretNumber) {
-	if (score > 1) {
-		displayMessage(guess > secretNumber ? '📈 Too high!' : '📉 Too low!');
-		score--;
-		document.querySelector('.score').textContent = score;
-	} else {
-		displayMessage('💥 You lost the game!');
-		document.querySelector('.score').textContent = 0;
-	}
-}
-```
 
 ## Proyecto ventanas  modales
 
