--- a/curso-js/JavaScript/4. Fundamentos del DOM y eventos.md
+++ b/curso-js/JavaScript/4. Fundamentos del DOM y eventos.md
@@ -51,13 +51,13 @@ function changeColor(newColor) {
 ```
 Observa que cambiamos valores  de css mediante js  con la **propiedad *style*** y que las propiedades de css desde JavaScript se escrien en **notación camelCase**.
 
-### getElementByClassName
+### getElementsByClassName
 - Similar al caso anterior, pero retorna un array de objetos.
 
 
 ## Proyecto adivinar un número
 
-Código  en [[Instrucciones|carpeta Proyecto 1]]
+Código  en [[Proyectos/Proyecto 1 - Adivinar número/Instrucciones|carpeta Proyecto 1]]
 
 Vemos primero el proyecto en ejecución.
 
@@ -76,9 +76,9 @@ document.querySelector('.score').textContent = 10;
 ### Número al  azar
 Mediante el objeto [Math](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math). Puedes hacer pruebas con  un quokka.js.
 
-Por ejemplo  un número al azar entre y y 20:
+Por ejemplo  un número al azar entre 1 y 20:
 ```js
-let secretNumber = Math.trunc(Math.random() * 20) + 1;
+const secretNumber = Math.trunc(Math.random() * 20) + 1;
 ```
 
 ### Creación de eventos
@@ -283,7 +283,7 @@ Observa que hay  varios elementos de tipo botón con la clase show-modal, para p
 
 Para añadir o quitar clases utilizaremos los métodos siguientes:
 ```js
-	element.classList.add(nombreClase);
+  element.classList.add(nombreClase);
   element.classList.remove(nombreClase);
 ```
 
