--- a/curso-js/JavaScript/2. Entorno de trabajo.md
+++ b/curso-js/JavaScript/2. Entorno de trabajo.md
@@ -1,7 +1,7 @@
 
 ## Objetivos
 
-- [ ] Instalar Obsidian 📅 2023-02-16 #entorno
+- [ ] Instalar Obsidian #entorno 📅 2023-02-16
 - [ ] Instalar  Visual Studio Code  📅 2023-02-16 #entorno
 - [ ] Instalar extensiones en Visual Studio Code (prettier  y eslint, quokka.js) 📅 2023-02-16  #entorno
 - [ ] Instalar un theme en Visual Studio Code 📅 2023-02-16 #entorno 
