update with  arrays

--- a/curso-js/JavaScript/4. Fundamentos del DOM y eventos.md
+++ b/curso-js/JavaScript/4. Fundamentos del DOM y eventos.md
@@ -322,7 +322,7 @@ Observa en el código anterior que el closeModal aparece en 2 sitios porque se p
 
 Aún podríamos cerrar el  modal de una tercera forma, pulsando  la tecla  ESC. En este  caso, sería  un  evento global, porque es al pulsar el teclado y no un elemento de la pantalla y lo mejor es asociarlo  al documento.
 
-Hay  3 eventos posibles, keydown, keypress y  keyup. Se  suele usar el primero de ellos y la función que maneja el evento (handler function), cada vez que se dispara el evento,  recibo un objeto con las propiedades del mismo. Recibe por ejemplo la  tecla pulsada, que nos viene bien para  filtrar cuando se debe cerrar la ventana modal:
+Hay  3 eventos posibles, keydown, keypress (deprecated) y  keyup. Se  suele usar el primero de ellos y la función que maneja el evento (handler function), cada vez que se dispara el evento,  recibo un objeto con las propiedades del mismo. Recibe por ejemplo la  tecla pulsada, que nos viene bien para  filtrar cuando se debe cerrar la ventana modal:
 
 ```js
 document.addEventListener('keydown', function (e) {
