--- a/curso-js/JavaScript/5. Arrays y objetos.md
+++ b/curso-js/JavaScript/5. Arrays y objetos.md
@@ -222,7 +222,7 @@ Podríamos haber  definido la función add con un  argumento de tipo array, pero
 
 
 ## Operador OR  y objetos
-El operador **||** no  devuelve verdadero o falso. Devuelve el primer valor que encuentre que pueda  ser verdadero (type coercion) y si no el último.
+El operador **||** no  devuelve verdadero o falso. Devuelve el primer valor que encuentre que pueda  ser verdadero (type coercion) y si no, el último.
 ¿Qué quiero decir?
 Observa resultados:
 
@@ -294,14 +294,14 @@ O ¿el operador de "unión nulosa"?
 El operador **||**  evalua a false el 0 y la cadena '' y nos puede llevar a resultados inesperados. El operador **??** no, sólo con  valores nulos (*null* y *undefined*)
 
 ```js
-restaurant.numGuests = 0;
+*restaurant.numGuests = 0;
 const guests = restaurant.numGuests || 10;
 console.log(guests);
 
 
 // Nullish: null and undefined (NOT 0 or '')
 const guestCorrect = restaurant.numGuests ?? 10;
-console.log(guestCorrect);
+console.log(guestCorrect);*
 
 ```
 
