--- a/curso-js/JavaScript/1. Introducción.md
+++ b/curso-js/JavaScript/1. Introducción.md
@@ -10,35 +10,34 @@
 - El curso es demasiado dificil:
 	- Repasar conceptos después de cada tema
 	- No todos estáis en el mismo punto de salida
+	- ¡Preguntad!
+	- Uso de IA
+		- Entender el código autogenerado
+		- Documenta el código
 
 - El curso es demasiado fácil
 	- Ten paciencia, acabamos de empezar
 	- Usa tu imaginación en los proyectos
 
 - Advertencias
-	- El código hay que hacerlo evita el copy-paste
+	- En la medida de lo posible, evita el copy-paste
 	- La soltura programando se coge programando
-	- Vuelve atrás de vez en cuando para terminar de aprender cosas
+	- Vuelve atrás de vez en cuando para madurar las cosas
 	- Haz anotaciones en el código
 	- Github copilot y otros IA están para ayudar, no para desentenderte del código.
 
 - Busca "tu nicho"
 	- ¿Web, apps, sistemas?
 	- Escoge tu lenguaje de programación
-		- https://survey.stackoverflow.co/2022/
+		- https://survey.stackoverflow.co/2023/
 		- https://www.tiobe.com/tiobe-index/
 	- Gestiona tu conocimiento (por ej. yo uso Obsidian)
 
 
 
 ## Curva  de aprendizaje
-- [Lectura recomendable](https://www.thinkful.com/blog/why-learning-to-code-is-so-damn-hard/)
- ![[Pasted image 20211228214126.png]]
 
-
-![[Pasted image 20211228214228.png]]
-
-  ![[Pasted image 20220214224529.png]]
+![[curva de aprendizaje.png]]
 
 
 ## Fundamentos de JavaScript
@@ -126,6 +125,6 @@ ES.next
 ## ¿Cómo desarrollamos en JS?
 - Desarrollo: Utilizamos la última versión de Google Chrome
 - Producción: 
-	- Babel para transpilar y  polyfill del código a ES5
-	- Compatibilidad con todos los navegadores (ver https://kangax.github.io/compat-table/es6/)
+	- Babel para transpilar y  polyfill del código a versiones anteriores
+	- Compatibilidad con todos los navegadores (ver https://compat-table.github.io/compat-table/esnext/)
 
