--- a/curso-js/JavaScript/3. Fundamentos de JavaScript.md
+++ b/curso-js/JavaScript/3. Fundamentos de JavaScript.md
@@ -1,7 +1,7 @@
 ## Objetivos
 
-- [ ] Ejecutar un fichero js en navegador, quoakka.js y terminal 📅 2023-02-16 #fundamentosjs
-- [ ] Aprender a  debuggear 📅 2023-02-20 #fundamentosjs
+- [ ] Ejecutar un fichero js en navegador, quoakka.js y terminal #fundamentosjs
+- [ ] Aprender a  debuggear  #fundamentosjs
 
 
 ## Donde se ejecuta JavaScript
