--- a/curso-js/React/1. Introducción a React.md
+++ b/curso-js/React/1. Introducción a React.md
@@ -1,8 +1,8 @@
 ## Objetivos
-- [ ] Entender el comando npx📅 2023-02-28 #react
-- [ ] Entender componentes y estructura proyecto en React 📅 2023-02-28 #react
-- [ ] Saber usar useState 📅 2023-02-28 #react
-- [ ] Saber buscar e instalar paquetes de terceros📅 2023-02-28 #react
+- [ ] Entender el comando npx #react
+- [ ] Entender componentes y estructura proyecto en React  #react
+- [ ] Saber usar useState  #react
+- [ ] Saber buscar e instalar paquetes de terceros #react
 
 ## Creación de un nuevo proyecto
 
