--- a/curso-js/JavaScript/2. Entorno de trabajo.md
+++ b/curso-js/JavaScript/2. Entorno de trabajo.md
@@ -1,17 +1,19 @@
 
 ## Objetivos
 
-- [ ] Instalar Obsidian #entorno 📅 2023-02-16
-- [ ] Instalar  Visual Studio Code  📅 2023-02-16 #entorno
-- [ ] Instalar extensiones en Visual Studio Code (prettier  y eslint, quokka.js) 📅 2023-02-16  #entorno
-- [ ] Instalar un theme en Visual Studio Code 📅 2023-02-16 #entorno 
-- [ ] Instalar node.js 📅 2023-02-16 #entorno 
+- [ ] Instalar Obsidian  #entorno 
+- [ ] Instalar  Visual Studio Code   #entorno
+- [ ] Instalar extensiones en Visual Studio Code (prettier  y eslint, quokka.js)  #entorno
+- [ ] Instalar un theme en Visual Studio Code  #entorno 
+- [ ] Instalar node.js  #entorno 
+- [ ] Instalar Git Kraken 
 
 
-
-## [[Obsidian]]
+## Obsidian
 Será nuestro *second brain* o *cerebro digital*
 Usaremos [[Lenguaje Markdown]]
+
+## [[GitKraken]]
 
 ## [[Instalación de node.js]]
 
