--- a/curso-js/JavaScript/1. Introducción.md
+++ b/curso-js/JavaScript/1. Introducción.md
@@ -88,7 +88,7 @@ p.hide();
 
 **Cliente web**
 - JavaScript
-- Framewords de JavaScript
+- Frameworks de JavaScript
 	- Están basados 100%  en JavaScript
 	- Pueden desaparecer, pero no JS
 	- Algunos ejemplos:
