--- a/curso-js/JavaScript/3. Fundamentos de JavaScript.md
+++ b/curso-js/JavaScript/3. Fundamentos de JavaScript.md
@@ -1,7 +1,7 @@
 ## Objetivos
 
-- [ ] Ejecutar un fichero js en navegador, quoakka.js y terminal #fundamentosjs
-- [ ] Aprender a  debuggear  #fundamentosjs
+- [x] Ejecutar un fichero js en navegador, quoakka.js y terminal #fundamentosjs ✅ 2023-12-21
+- [x] Aprender a  debuggear #fundamentosjs ✅ 2023-12-21
 
 
 ## Donde se ejecuta JavaScript
@@ -139,6 +139,56 @@ Pedro y  Lucas quieren comparar su índice de masa corporal, que se calcula medi
 TEST DATA 1: Pedro pesa 78 kg y mide 1.69.  Lucas pesa 92 kg y mide 1.95.
 TEST DATA 2: Pedro pesa 95 kg y mide 1.88.  Lucas pesa 85 kg y mide 1.76.
 
+***Enunciado para solución en ChatGPT:***
+
+```
+Eres un desarrollador de JavaScript y tienes que solucionar un problema en base a unos requerimientos que te voy a dar. 
+Las instrucciones son las siguientes:
+- Examina todos los requerimientos.
+- Verifica que tu solución cumple todos los requerimientos y que implemente el principio DRY.
+- Comprueba los resultados con los datos de test que te doy.
+
+<requerimientos>
+Pedro y  Lucas quieren comparar su índice de masa corporal, que se calcula mediante  la fórmula IMC =  peso / (altura x altura) (masa en kg y altura en metros).
+
+1. Guarda el  peso  y la altura de Pedro y Lucas  en  variables
+2. Calcula el IMC de ambos.
+3. Guarda en una variable booleana llamada PedroMayorIMC el resultado.
+</requerimientos>
+
+<datos de test>
+TEST DATA 1: Pedro pesa 78 kg y mide 1.69.  Lucas pesa 92 kg y mide 1.95.
+TEST DATA 2: Pedro pesa 95 kg y mide 1.88.  Lucas pesa 85 kg y mide 1.76.
+</datos de test>
+```
+
+***Solución ChatGPT:***
+```js
+// Función para calcular el IMC
+function calcularIMC(peso, altura) {
+  return peso / (altura * altura);
+}
+
+// Datos de prueba
+const test1 = { Pedro: { peso: 78, altura: 1.69 }, Lucas: { peso: 92, altura: 1.95 } };
+const test2 = { Pedro: { peso: 95, altura: 1.88 }, Lucas: { peso: 85, altura: 1.76 } };
+
+// Calcula el IMC para ambos casos
+const imcPedroTest1 = calcularIMC(test1.Pedro.peso, test1.Pedro.altura);
+const imcLucasTest1 = calcularIMC(test1.Lucas.peso, test1.Lucas.altura);
+
+const imcPedroTest2 = calcularIMC(test2.Pedro.peso, test2.Pedro.altura);
+const imcLucasTest2 = calcularIMC(test2.Lucas.peso, test2.Lucas.altura);
+
+// Compara los IMC y guarda el resultado en una variable booleana
+const PedroMayorIMCTest1 = imcPedroTest1 > imcLucasTest1;
+const PedroMayorIMCTest2 = imcPedroTest2 > imcLucasTest2;
+
+// Muestra los resultados
+console.log('Test 1 - ¿Pedro tiene un mayor IMC que Lucas?', PedroMayorIMCTest1);
+console.log('Test 2 - ¿Pedro tiene un mayor IMC que Lucas?', PedroMayorIMCTest2);
+
+```
 
 ## Comentarios en JavaScript
 
