--- a/curso-js/React/2. Proyecto adivina número en react.md
+++ b/curso-js/React/2. Proyecto adivina número en react.md
@@ -45,9 +45,9 @@ function App() {
           </button>
         </section>
         <section className="right">
-			<p class="message">Start guessing...</p>
+			<p className="message">Start guessing...</p>
           <p className="label-score">
-            💯 Score: <span className="score">{score}</span>
+            💯 Score: <span className="score">0</span>
           </p>
           <p className="label-highscore">
             🥇 Highscore: <span className="highscore">0</span>
@@ -203,7 +203,7 @@ function App() {
   }
 
   const handleReset = () => {
-    console.log('botón de reset ejecutado!')
+    console.log('botón de reset pulsado!')
   }
   ......
 }
@@ -212,8 +212,8 @@ function App() {
 - Comprobamos que efectivamente al pulsar los botones, el código se muestra por consola.
 
 ## Definición de nuestras variables de estado
-- Las variables de estado se definen mediante el reactHook ```useState```. Esta función nos devuelve un array con dos valores, la variable y la función para modificarla. El nombre de ambas variables se recoge utilizando destructuración de arrays:
-- Debemos definir tantas variables de estado como dependencias que tenga nuestra función que hagan que si cambian, el código se deba volver a renderizar:
+- Las variables de estado se definen mediante el reactHook ```useState```. Esta función nos devuelve un array con dos valores, la variable y la función para modificarla. El nombre de ambas variables se recoge utilizando destructuración de arrays.
+- Debemos definir tantas variables de estado como dependencias que tenga nuestra función App que hagan que si cambian, el código se deba volver a renderizar:
 	- Si el score o el highScore cambia como "se pinta" en la pantalla, deben ser variables de estado.
 	- El número que introducimos (variable guessNumber) podríamos pensar que no es variable de estado, pero como en función de ese número aparece un mensaje "Número pequeño", "Número grande" o "Número correcto", sí debemos definirlo como variable de estado (aunque para los dos primeros casos no es necesario, porque como el score disminuye al no acertar, ya estariamos forzando el renderizado).
 	- El número secreto, también lo definimos como variable de estado, para poder mostrarlo en pantalla y hacer más fácil el testeo.
@@ -258,7 +258,7 @@ return (
 ## Obtención de los input de usuario
 
 - Cuando trabajamos con react, el código html, no es el que vemos en el navegador, se maneja un ***dom virtual*** que cada cierto tiempo se sincroniza con lo que se ve en el navegador. Así que no tiene sentido usar *querySelector, getElementById*...* u otras funciones definidas en el dom, ya que accederíamos al dom real y no al virtual, y en cualquier momento de sincronización podríamos tener datos erróneos.
-- Debemos usar un react hook llamado *useRef*:
+- Debemos usar un react hook llamado *useRef*
 	- Importamos el hook
 	 - Lo inicializamos a null en una variable
 	 - Lo asociamos al elemento en cuestión de donde queremos obtener los datos
@@ -317,7 +317,7 @@ function App()
 	- Un conjunto de variables de estado, tal que el cambio de alguna de ellas provocará que la función anterior se ejecute.
 - Cuando el número introducido cambia, es cuando debemos poner la lógica de nuestra app:
 
-```
+```js
   useEffect(() => {
     if (guessNumber === '') return
     if (guessNumber === secretNumber) {
@@ -366,6 +366,7 @@ return (
             guessNumber={guessNumber}
             secretNumber={secretNumber}
             score={score}
+            highscore={highscore}
           />
         </section>
       </main>
@@ -377,8 +378,8 @@ return (
 
 ```js
 import './Informe.css'
-function MostrarMensaje(props) {
-  const { score, guessNumber, secretNumber } = props
+function InformeApp(props) {
+  const { score, guessNumber, secretNumber, highscore } = props
   let parrafo = ''
   if (guessNumber === secretNumber) {
     parrafo = <p className="message">🎉 Número correcto!!!</p>
@@ -402,8 +403,9 @@ function MostrarMensaje(props) {
             🥇 Highscore: <span className="highscore">{highscore}</span>
     </p>
   </>
-}
+)}
 
+export default InformeApp
 ```
 
 - Tarea: mover bloques de css del fichero *App.css* al nuevo fichero *Informe.css* 
