upgrade 2025 tasks and survey

--- a/curso-js/JavaScript/2. Entorno de trabajo.md
+++ b/curso-js/JavaScript/2. Entorno de trabajo.md
@@ -1,12 +1,12 @@
 
 ## Objetivos
 
-- [x] Instalar Obsidian #entorno 📅 2023-12-18 ✅ 2023-12-18
-- [x] Instalar  Visual Studio Code #entorno 📅 2023-12-18 ✅ 2023-12-18
-- [x] Instalar extensiones en Visual Studio Code (prettier  y eslint, quokka.js) #entorno 📅 2023-12-19 ✅ 2023-12-21
-- [x] Instalar un theme en Visual Studio Code #entorno 📅 2023-12-19 ✅ 2023-12-19
-- [x] Instalar node.js #entorno 📅 2023-12-19 ✅ 2023-12-19
-- [x] Instalar Git Kraken #entorno 📅 2023-12-18 ✅ 2023-12-18
+- [ ] Instalar Obsidian #entorno 📅 2025-01-13 
+- [ ] Instalar  Visual Studio Code #entorno 📅 2025-01-13 
+- [ ] Instalar extensiones en Visual Studio Code (prettier  y eslint, quokka.js) #entorno 📅 2025-01-13 
+- [ ] Instalar un theme en Visual Studio Code #entorno 📅 2025-01-13 
+- [ ] Instalar node.js #entorno 📅 2025-01-13 
+- [ ] Instalar Git Kraken #entorno 📅 2025-01-13 
  
 
 ## Obsidian
