--- a/curso-js/JavaScript/3. Fundamentos de JavaScript.md
+++ b/curso-js/JavaScript/3. Fundamentos de JavaScript.md
@@ -1,8 +1,7 @@
 ## Objetivos
 
-- [x] Ejecutar un fichero js en navegador, quoakka.js y terminal #fundamentosjs ✅ 2023-12-21
-- [x] Aprender a  debuggear #fundamentosjs ✅ 2023-12-21
-
+- [ ] Ejecutar un fichero js en navegador, quoakka.js y terminal #fundamentosjs 
+- [ ] Aprender a  debuggear #fundamentosjs
 
 ## Donde se ejecuta JavaScript
 
