--- a/curso-js/JavaScript/2. Entorno de trabajo.md
+++ b/curso-js/JavaScript/2. Entorno de trabajo.md
@@ -1,12 +1,12 @@
 
 ## Objetivos
 
-- [ ] Instalar Obsidian #entorno 📅 2025-01-13 
-- [ ] Instalar  Visual Studio Code #entorno 📅 2025-01-13 
+- [x] Instalar Obsidian #entorno 📅 2025-01-13 ✅ 2025-01-13
+- [x] Instalar  Visual Studio Code #entorno 📅 2025-01-13 ✅ 2025-01-13
 - [ ] Instalar extensiones en Visual Studio Code (prettier  y eslint, quokka.js) #entorno 📅 2025-01-13 
-- [ ] Instalar un theme en Visual Studio Code #entorno 📅 2025-01-13 
-- [ ] Instalar node.js #entorno 📅 2025-01-13 
-- [ ] Instalar Git Kraken #entorno 📅 2025-01-13 
+- [x] Instalar un theme en Visual Studio Code #entorno 📅 2025-01-13 ✅ 2025-01-13
+- [x] Instalar node.js #entorno 📅 2025-01-13 ✅ 2025-01-13
+- [x] Instalar Git Kraken #entorno 📅 2025-01-13 ✅ 2025-01-13
  
 
 ## Obsidian
