--- a/curso-js/JavaScript/3. Fundamentos de JavaScript.md
+++ b/curso-js/JavaScript/3. Fundamentos de JavaScript.md
@@ -52,7 +52,11 @@ En mayúsculas los objetos o constantes.
 Pero es una costumbre generalizada no un  requerimiento del lenguaje
 
 Las variables no pueden empezar por número:
-let 3years ---> Error, nos avisa de  que no  se  puede nombrar así!!!
+```js
+let 3years 
+// Error, nos avisa de  que no  se  puede nombrar así!!!
+```
+
 Estos errores aparecen en la consola, aunque no lo hagamos nosotros de forma explícita.
 
 
@@ -364,7 +368,7 @@ if (esMayorDeEdad && tieneCarnetDeConducir  && !estaCansado)   {
 Tenemos dos equipos  de gimnastas,  España y Francia. Deben competir entre  ellos un total de 3  veces.
 El  que  tenga la mayor puntuación media gana el trofeo.
 
-1. Caxlcula la puntuación  media de  cada equipo teniendo en cuenta  los datos proporcionados.
+1. Calcula la puntuación  media de  cada equipo teniendo en cuenta  los datos proporcionados.
 
 2. Compara  la  puntuación media de cada  equipo para determinar el ganador y muéstralo por  consola. No  olvides que puede haber  un  empate  y  ¡los dos  serán campeones! 
 
