update with codeium

--- a/curso-js/JavaScript/3. Fundamentos de JavaScript.md
+++ b/curso-js/JavaScript/3. Fundamentos de JavaScript.md
@@ -142,58 +142,52 @@ Pedro y  Lucas quieren comparar su índice de masa corporal, que se calcula medi
 TEST DATA 1: Pedro pesa 78 kg y mide 1.69.  Lucas pesa 92 kg y mide 1.95.
 TEST DATA 2: Pedro pesa 95 kg y mide 1.88.  Lucas pesa 85 kg y mide 1.76.
 
-***Enunciado para solución en ChatGPT:***
-
-```
-Eres un desarrollador de JavaScript y tienes que solucionar un problema en base a unos requerimientos que te voy a dar. 
-Las instrucciones son las siguientes:
-- Examina todos los requerimientos.
-- Verifica que tu solución cumple todos los requerimientos y que implemente el principio DRY.
-- Comprueba los resultados con los datos de test que te doy.
-
-<requerimientos>
-Pedro y  Lucas quieren comparar su índice de masa corporal, que se calcula mediante  la fórmula IMC =  peso / (altura x altura) (masa en kg y altura en metros).
-
-1. Guarda el  peso  y la altura de Pedro y Lucas  en  variables
-2. Calcula el IMC de ambos.
-3. Guarda en una variable booleana llamada PedroMayorIMC el resultado.
-</requerimientos>
-
-<datos de test>
-TEST DATA 1: Pedro pesa 78 kg y mide 1.69.  Lucas pesa 92 kg y mide 1.95.
-TEST DATA 2: Pedro pesa 95 kg y mide 1.88.  Lucas pesa 85 kg y mide 1.76.
-</datos de test>
-```
-
-***Solución ChatGPT:***
+***Solución Codeium:***
 ```js
-// Función para calcular el IMC
-function calcularIMC(peso, altura) {
+// Test data for Pedro and Lucas
+const pesoPedro = 78;
+const alturaPedro = 1.69;
+const pesoLucas = 92;
+const alturaLucas = 1.95;
+
+// Calculate BMI for Pedro and Lucas
+const imcPedro = pesoPedro / (alturaPedro * alturaPedro);
+const imcLucas = pesoLucas / (alturaLucas * alturaLucas);
+
+// Determine if Pedro has a higher BMI than Lucas
+const PedroMayorIMC = imcPedro > imcLucas;
+
+console.log(`IMC de Pedro: ${imcPedro.toFixed(2)}, IMC de Lucas: ${imcLucas.toFixed(2)}`);
+console.log(`¿Pedro tiene un IMC mayor que Lucas? ${PedroMayorIMC}`);
+```
+
+Vamos a poner Pedro y Lucas como objetos y definir la función calcularIMC
+```js
+const PEDRO = {
+  peso: 78,
+  altura: 1.69
+};
+
+const LUCAS = {
+  peso: 92,
+  altura: 1.95
+};
+
+function imc({ peso, altura }) {
   return peso / (altura * altura);
 }
 
-// Datos de prueba
-const test1 = { Pedro: { peso: 78, altura: 1.69 }, Lucas: { peso: 92, altura: 1.95 } };
-const test2 = { Pedro: { peso: 95, altura: 1.88 }, Lucas: { peso: 85, altura: 1.76 } };
+const pedroIMC = imc(PEDRO);
+const lucasIMC = imc(LUCAS);
 
-// Calcula el IMC para ambos casos
-const imcPedroTest1 = calcularIMC(test1.Pedro.peso, test1.Pedro.altura);
-const imcLucasTest1 = calcularIMC(test1.Lucas.peso, test1.Lucas.altura);
+const PEDRO_MAYOR_IMC = pedroIMC > lucasIMC;
 
-const imcPedroTest2 = calcularIMC(test2.Pedro.peso, test2.Pedro.altura);
-const imcLucasTest2 = calcularIMC(test2.Lucas.peso, test2.Lucas.altura);
-
-// Compara los IMC y guarda el resultado en una variable booleana
-const PedroMayorIMCTest1 = imcPedroTest1 > imcLucasTest1;
-const PedroMayorIMCTest2 = imcPedroTest2 > imcLucasTest2;
-
-// Muestra los resultados
-console.log('Test 1 - ¿Pedro tiene un mayor IMC que Lucas?', PedroMayorIMCTest1);
-console.log('Test 2 - ¿Pedro tiene un mayor IMC que Lucas?', PedroMayorIMCTest2);
-
+console.log(`El IMC de Pedro es de ${pedroIMC.toFixed(2)}`);
+console.log(`El IMC de Lucas es de ${lucasIMC.toFixed(2)}`);
+console.log(`Pedro tiene un IMC mayor que Lucas ? ${PEDRO_MAYOR_IMC ? 'Sí' : 'No'}`);
 ```
 
-## Comentarios en JavaScript
+## Cadenas de texto en JavaScript
 
 - Forma tradicional  (con  comillas dobles o simples)
 ```js
