explicar mejor arrays

--- a/curso-js/JavaScript/3. Fundamentos de JavaScript.md
+++ b/curso-js/JavaScript/3. Fundamentos de JavaScript.md
@@ -357,6 +357,73 @@ if (esMayorDeEdad && tieneCarnetDeConducir  && !estaCansado)   {
 ```
 
 
+## Arrays
+Es una forma de almacenar variables de forma  más compacta:
+
+```js
+const amigo1="pepe";
+const amigo2="juan";
+const amigo3="lucas";
+const amigos = ["pepe", "juan", "lucas"];
+const amigos = new Array("pepe", "juan", "lucas"),
+console.log(amigos, amigos[0], `total  de amigos: ${amigos.length}`);
+```
+
+Se pueden modificar valores:
+```js
+const amigos[2]="alfredo";
+console.log(amigos);
+```
+
+¡Ojo!, ***const*** mantiene la dirección  de  memoria,  los datos pueden  cambiar, no es como  los datos primitivos. Lo siguiente si daría error:
+
+```js
+amigos = ["pedro"];
+```
+
+Podemos  tener datos de tipo diverso:
+```js
+const nombre='Fernando';
+const fernando = [nombre, 'Martínez', 2022 - 1990, 'mecánico', amigos];
+console.log(fernando);
+```
+
+## Ejercicio
+
+Crear un array  de edades en función  de los siguientes datos:
+
+```js
+function calcularEdad (añoNacimiento) { 
+	return (2022 - añoNacimiento);
+}
+const añosNacimiento =  [1990,  1985, 2002, 1998];
+```
+
+Opciones:
+```js
+const edad1 = calcularEdad(añosNacimiento[0]);
+const edad2 = calcularEdad(añosNacimiento[1]);
+const edad3 = calcularEdad(añosNacimiento[2]);
+const edades = [edad1, edad2, edad3];
+const edades2 = [calcularEdad(añosNacimiento[0]), calcularEdad(añosNacimiento[1]), calcularEdad(añosNacimiento[2])];
+```
+
+También  se  podría  solucionar mediante iteraciones (for, while, foreach...) que veremos más adelante.
+
+JS tiene muchos métodos asociados a arrays. Los veremos más adelante, pero cito aquí algunos:
+
+```js
+const edad4 = calcularEdad(1980);
+edades.push(edad4);
+console.log(edades);
+```
+
+**Array.unshift()** añade al principio del array.
+**Array.pop()** quita un elemento al final del array.
+**Array.shift()**  quita  un elemento al principio del array
+**Array.indexOf()** indica la posición del elemento
+**Array.includes()** devuelve si el elemento existe o no
+
 ## Desafío  3
 
 Tenemos dos equipos  de gimnastas,  España y Francia. Deben competir entre  ellos un total de 3  veces.
@@ -504,32 +571,6 @@ console.log(
 )
 ```
 
-
-
-## Strict mode
-Se activa  escribiendo 
-```js
-// debe ser la primera línea del script
-'use  strict'; 
-```
-
-Nos puede evitar ciertos errores programando, compara el siguiente  código activando el uso estricto o no:
-
-```js
-let tieneCarnetDeConducir = false;
-const aprobadoExamenConducir = true;
-if (aprobadoExamenConducir)  tieneCarneDeConducir = true;
-if (tieneCarnetDeConducir) console.log('Puede conducir!')
-```
-
-Otros ejemplos:
-```js
-// posibles  palabras reservadas en un futuro para el lenguaje.
-const interface = 'carnet';
-const private = true;
-```
-
-
 ##  Funciones
 
 Se definen:
@@ -569,19 +610,19 @@ Gracias a los parámetros podemos ejecutar la función  con diferentes valores.
 
 - Declaración de funciones
 
-	```js
-	function calcularEdad (añoNacimiento)  {
+```js
+function calcularEdad (añoNacimiento)  {
 		return 2022 - añoNacimiento;
-	}
-	const edad1 = calcularEdad(1990);
-	```
+}
+const edad1 = calcularEdad(1990);
+```
 
 - Almacenamiento en una variable, usando una función  anónima. Es una expresión de función (no una  declaración como antes) y **tiene  que retornar algo, para que  podamos guardarlo en una variable**.
-	```js
-	const calcularEdad = function (añoNacimiento)  {
-		return 2022 - añoNacimiento;
-	}
-	```
+```js
+const calcularEdad = function (añoNacimiento)  {
+	return 2022 - añoNacimiento;
+}
+```
 
 En el primer  caso, se puede llamar a la función antes de declararla.  En el segundo caso no. Esto es debido a una cosa llamada **hoisting**, que veremos más adelante.
 
@@ -590,9 +631,9 @@ Usar uno u otro tipo es cuestión de preferencias personales. Yo personalmente p
 Hay un tercer tipo  que se añadió en ES6 y es "más rápida de escribir" ya que nos ahorramos las llaves y  el return (al ser una sola línea):
 
 - Funciones flecha (arrow functions):
-	```js
-	const calcularEdad = añoNacimiento => 2022 - añoNacimiento;
-	```
+```js
+const calcularEdad = añoNacimiento => 2022 - añoNacimiento;
+```
 
 Ejercicio:
 -  Crea una función  flecha que calcule los años para la jubilación.
@@ -628,72 +669,6 @@ function hacerZumo (naranjas, manzanas) {
 const zumoDeManzana = hacerZumo (0,5);
 console.log(zumoDeManzana);
 ```
-
-## Arrays
-Es una forma de almacenar variables de forma  más compacta:
-
-```js
-const amigo1="pepe";
-const amigo2="juan";
-const amigo3="lucas";
-const amigos = ["pepe", "juan", "lucas"];
-const amigos = new Array("pepe", "juan", "lucas"),
-console.log(amigos, amigos[0], `total  de amigos: ${amigos.length}`);
-```
-
-Se pueden modificar valores:
-```js
-const amigos[2]="alfredo";
-console.log(amigos);
-```
-
-¡Ojo!, ***const*** mantiene la dirección  de  memoria,  los datos pueden  cambiar, no es como  los datos primitivos. Lo siguiente si daría error:
-
-```js
-amigos = ["pedro"];
-```
-
-Podemos  tener datos de tipo diverso:
-```js
-const nombre='Fernando';
-const fernando = [nombre, 'Martínez', 2022 - 1990, 'mecánico', amigos];
-console.log(fernando);
-```
-
-
-## Ejercicio
-
-Crear un array  de edades en función  de los siguientes datos:
-
-```js
-const calcularEdad = añoNacimiento => 2022 - añoNacimiento;
-const añosNacimiento =  [1990,  1985, 2002, 1998];
-```
-
-Opciones:
-```js
-const edad1 = calcularEdad(añosNacimiento[0]);
-const edad2 = calcularEdad(añosNacimiento[1]);
-const edad3 = calcularEdad(añosNacimiento[2]);
-const edades = [edad1, edad2, edad3];
-const edades2 = [calcularEdad(añosNacimiento[0]), calcularEdad(añosNacimiento[1]), calcularEdad(añosNacimiento[2])];
-```
-
-También  se  podría  solucionar mediante iteraciones (for, while, foreach...) que veremos más adelante.
-
-JS tiene muchos métodos asociados a arrays. Los veremos más adelante, pero cito aquí algunos:
-
-```js
-const edad4 = calcularEdad(1980);
-edades.push(edad4);
-console.log(edades);
-```
-
-**Array.unshift()** añade al principio del array.
-**Array.pop()** quita un elemento al final del array.
-**Array.shift()**  quita  un elemento al principio del array
-**Array.indexOf()** indica la posición del elemento
-**Array.includes()** devuelve si el elemento existe o no
 
 
 ## Desafio 5
@@ -814,7 +789,7 @@ El for es más adecuado para un número fijo de iteraciones (por ejemplo, la lon
 
 ## Debug
 
-Hablamos   de debug sobre la manera de inspeccionar nuestro código para corregir los errores o bugs.
+Hablamos  de debug sobre la manera de inspeccionar nuestro código para corregir los errores o bugs.
 El siguiente código sirve para calcular la temperatura en grados Kelvin a partir de grados centígrados. Ejecuta el siguiente código y verás que se produce un error:
 
 ```js
