Añadido ejemplo switch días semana

--- a/curso-js/JavaScript/3. Fundamentos de JavaScript.md
+++ b/curso-js/JavaScript/3. Fundamentos de JavaScript.md
@@ -365,7 +365,7 @@ const amigo1="pepe";
 const amigo2="juan";
 const amigo3="lucas";
 const amigos = ["pepe", "juan", "lucas"];
-const amigos = new Array("pepe", "juan", "lucas"),
+// const amigos = new Array("pepe", "juan", "lucas"),
 console.log(amigos, amigos[0], `total  de amigos: ${amigos.length}`);
 ```
 
@@ -533,6 +533,68 @@ if  (edad>=18)  {
   drink = 'water';
 }
 ```
+
+
+## Ejemplo de switch usando IA
+
+Queremos mostrar uno u otro mensaje en función del día en la semana en que estemos.
+- La estructura del switch se genera automaticamente por el editor
+- Guardamos en constantes los datos del switch para prevenir errores
+- Obtenemos el día de la semana en el que estamos mediante IA y el objeto ***Date***
+	- 2 opciones, mediante locale y "a mano"
+BONUS: Obtener el día al azar
+
+```js
+const LUNES = 'LUNES'
+const MARTES = 'MARTES'
+const MIERCOLES = 'MIÉRCOLES'
+const JUEVES = 'JUEVES'
+const VIERNES = 'VIERNES'
+const SABADO = 'SÁBADO'
+const DOMINGO = 'DOMINGO'
+
+/**
+ * Devuelve el día de la semana actual como string (LUNES, MARTES, ...).
+ * @returns {string} El día de la semana actual.
+ */
+function obtenerDiaSemana () {
+    const fechaActual = new Date()
+    console.log(fechaActual)
+    // diaActual obtengo de 0 a 6, donde 0 es domingo, 1 lunes...
+    const diaActual = fechaActual.getDay()
+    const diasSemana = [DOMINGO, LUNES, MARTES, MIERCOLES, JUEVES, VIERNES, SABADO]
+    return diasSemana[diaActual]
+}
+
+function obtenerDiaSemana2 () {
+    const opciones = { weekday: 'long' }
+    const fechaActual = new Date()
+    return fechaActual.toLocaleDateString('es-ES', opciones).toUpperCase()
+}
+
+console.log(obtenerDiaSemana2())
+
+
+const diaSemana = obtenerDiaSemana()
+
+switch (diaSemana) {
+    case LUNES:
+        console.log('Primer día de la semana, complicado')
+        break;
+    case MARTES:
+    case MIERCOLES:
+        console.log('Día de trabajo')
+        break;
+    case JUEVES:
+        console.log('Nos vamos de juepincho')
+        break;
+    default:
+        console.log('Estamos de fiesta o casi fiesta')
+        break;
+}
+
+```
+
 
 ## Desafio 4
 
