añadida solución ej debugger

--- a/curso-js/JavaScript/3. Fundamentos de JavaScript.md
+++ b/curso-js/JavaScript/3. Fundamentos de JavaScript.md
@@ -650,7 +650,7 @@ Se invocan llamando a  la función:
 saludar();
 /* reusamos el código de la función porque la ejecutamos dos veces */
 saludar();
-saludarConNombrer('pepe');
+saludarConNombre('pepe');
 ```
 
 Las funciones pueden retornar un valor:
@@ -881,3 +881,19 @@ Otra opción es escribir un punto de interrupción mediante una  línea en  nues
 debugger;
 ````
 Otra  opción  es poner el punto de interrupción directamente con las dev tools y luego inspeccionar desde allí. 
+
+Posible solución:
+```js
+const measureKelvin = function () {    const measurement = {  
+        type: 'temp',  
+        unit: 'celsius',  
+        value:  prompt('Introduce los grados Celsius')  
+    };  
+    const kelvin = Number(measurement.value) + 273; 
+    return kelvin;  
+};  
+console.log('voy a ejutar la función measureKelvin');  
+const gradosKelvin = measureKelvin();  
+console.log(`Los grados en Kelvin son: ${gradosKelvin}`);  
+console.log('ya he ejecutado la función measureKelvin');
+```
